--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "goit-react-hw-04-hooks-phonebook",
+  "homepage": "https://IevgenDanilov.github.io/goit-react-hw-04-hooks-phonebook/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,11 +11,10 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "shortid": "^2.2.16",
     "web-vitals": "^1.0.1"
   },
-  "homepage": "https://IevgenDanilov.github.io/goit-react-hw-04-hooks-phonebook/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
